force-app/main/default/objects/Well__c/Well__c.object-meta.xml
<CustomObject>
    <description>Represents oil and gas wells with lifecycle status tracking from permitted through drilling, producing, to abandonment.</description>
    <label>Well</label>
    <nameField>
        <label>Well Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wells</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>