force-app/main/default/objects/Well__c/fields/API_Number__c.field-meta.xml
<CustomField>
    <fullName>API_Number__c</fullName>
    <label>API Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>