force-app/main/default/objects/Well__c/fields/Formation__c.field-meta.xml
<CustomField>
    <fullName>Formation__c</fullName>
    <label>Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>