force-app/main/default/objects/Well__c/fields/Is_Declining__c.field-meta.xml
<CustomField>
    <fullName>Is_Declining__c</fullName>
    <label>Is Declining</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>