force-app/main/default/objects/Well__c/fields/Last_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Production_Date__c</fullName>
    <label>Last Production Date</label>
    <type>Date</type>
</CustomField>