force-app/main/default/objects/Well__c/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flowing</fullName>
            </value>
            <value>
                <fullName>Artificial Lift</fullName>
            </value>
            <value>
                <fullName>Shut-In</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>