force-app/main/default/objects/Well__c/fields/Regulatory_District__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_District__c</fullName>
    <label>Regulatory District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>