force-app/main/default/objects/Well__c/fields/Spud_Date__c.field-meta.xml
<CustomField>
    <fullName>Spud_Date__c</fullName>
    <label>Spud Date</label>
    <type>Date</type>
</CustomField>