force-app/main/default/objects/Well__c/fields/TestViaAPI__c.field-meta.xml
<CustomField>
    <fullName>TestViaAPI__c</fullName>
    <label>Test Via API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>