force-app/main/default/objects/Well__c/fields/Total_Depth__c.field-meta.xml
<CustomField>
    <fullName>Total_Depth__c</fullName>
    <label>Total Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>