force-app/main/default/objects/Well__c/fields/Total_Oil_Volume_12M__c.field-meta.xml
<CustomField>
    <fullName>Total_Oil_Volume_12M__c</fullName>
    <label>Total Oil Volume 12M (bbls)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>