force-app/main/default/objects/Well__c/fields/True_Vertical_Depth__c.field-meta.xml
<CustomField>
    <fullName>True_Vertical_Depth__c</fullName>
    <label>True Vertical Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>