force-app/main/default/objects/Well__c/fields/Well_Type__c.field-meta.xml
<CustomField>
    <fullName>Well_Type__c</fullName>
    <label>Well Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Water Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>