force-app/main/default/objects/Well__c/validationRules/Require_API_Number_For_Prod_Well.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_API_Number_For_Prod_Well</fullName>
    <active>true</active>
    <description>Producing wells must have an API Number registered with the state.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Producing&apos;) &amp;&amp; ISBLANK(API_Number__c)</errorConditionFormula>
    <errorMessage>API Number is required for producing wells.</errorMessage>
</ValidationRule>